# test-framework

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
scripts/: release.py
src/test_framework/: fixtures.py  report.py  steplog.py  verify.py
src/test_framework/api/: client.py
src/test_framework/reporting/: allure.py  base.py  pyhtml.py  spy.py
src/test_framework/steps/: __init__.py  api.py  web.py
src/test_framework/ui/pages/: base.py
tests/: conftest.py
tests/contract/: conftest.py  contract_pages.py  test_login_api_contract.py  test_login_web_contract.py  test_plugin_contract.py  test_web_evidence_contract.py
tests/contract/features/: login_api.feature  login_web.feature
tests/support/mockapp/: app.py
tests/unit/: test_allure_backend.py  test_client.py  test_pages.py  test_steplog.py  test_tag_bridge.py  test_verify.py  test_web_steps.py
