[project]
name = "test-framework"
version = "0.0.0"
description = "Thin, spec-traceable test automation framework wrapping pytest, pytest-bdd, pytest-playwright and httpx."
readme = "README.md"
authors = [
    { name = "Jesper Gadeberg", email = "jesper.gadeberg@gmail.com" }
]
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    # pytest pinned >=9.0.3 as a deliberate cool-down override: fixes CVE-2025-71176
    # (predictable /tmp/pytest-of-{user} naming, local DoS/privilege-escalation risk).
    "pytest>=9.0.3,<10",
    "pytest-bdd>=7.0,<8",
    "pytest-playwright>=0.8,<0.9",
    "playwright>=1.45,<2",
    "httpx>=0.27,<0.28",
    "pytest-html>=4.1,<5",
    "pytest-xdist>=3.6,<4",
]

[project.optional-dependencies]
allure = [
    "allure-pytest>=2.13,<3",
]

[project.entry-points.pytest11]
test_framework = "test_framework.fixtures"
test_framework_steps_api = "test_framework.steps.api"
test_framework_steps_web = "test_framework.steps.web"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.370",
    "ruff>=0.6.0",
    "pip-audit>=2.7.0",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
]

[tool.uv]
# Cool-down gate: only resolve dependency versions published before this date,
# giving the community a window to surface vulnerabilities before we adopt a release.
#
# Known exceptions accepted as of this cutoff (`uv run pip-audit`), both dev-only
# transitive deps never shipped to a consumer and not exposed to untrusted input
# in our usage - reviewed and accepted rather than weakening the cutoff globally:
#   - msgpack 1.1.2 (GHSA-6v7p-g79w-8964): pip-audit's own cachecontrol dependency;
#     fix (1.2.1) published 2026-06-18, after this cutoff.
#   - starlette 1.2.1 (PYSEC-2026-248/249): fastapi's dependency, used only by the
#     framework's own bundled contract-test mock; fixes (1.3.0/1.3.1) published
#     2026-06-11/12, after this cutoff.
# Re-evaluate both on the next cutoff bump (uv's --exclude-newer-package would let
# us pull just these forward once available on the pinned uv version).
exclude-newer = "2026-06-06T00:00:00Z"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
markers = [
    "api: API-level tests",
    "ui: Web-UI tests",
    "smoke: smoke subset",
    "requirement(id): traces a test/scenario to a requirement id, e.g. REQ-1234",
]
# --screenshot/--tracing: UI-failure evidence via pytest-playwright's own capture,
# which works for plain-Python tests and pytest-bdd scenarios alike (artifacts land
# in test-results/). junit_logging copies each test's captured log - the step/check
# lines the reporting backend emits - into the JUnit XML as audit evidence;
# log_level=INFO is required for those INFO-level lines to be captured at all.
addopts = "--junitxml=reports/junit.xml --html=reports/report.html --self-contained-html --screenshot=only-on-failure --tracing=retain-on-failure"
junit_logging = "log"
log_level = "INFO"
filterwarnings = [
    # pytest-bdd 7.x's generated scenario functions trigger this pytest 9 warning
    # on every BDD test; harmless noise pending a pytest-bdd release.
    "ignore:usefixtures\\(\\) in .* without arguments has no effect",
]

[tool.pyright]
include = ["src", "tests", "scripts"]
typeCheckingMode = "strict"
pythonVersion = "3.11"
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
